# FluentUI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FluentUI-qt5-MSBuild.sln  FluentUI.pro  License  MSBuild版使用方法.txt  README.md  README_zh_CN.md  THIRD_PARTY_COPYRIGHT.txt
example/: AboutPage.qml  App.qml  AppInfo.cpp  AppInfo.h  CMakeLists.txt  ChatController.cpp  ChatController.h  IPC.cpp  IPC.h  Info.plist  InstallHelper.cpp  InstallHelper.h  Installer.qml  MainPage.qml  SettingPage.qml  T-Rectangle.qml  T_Awesome.qml  T_Badge.qml  T_Buttons.qml  T_Calendar.qml  T_CalendarPicker.qml  T_Calender.qml  T_Carousel.qml  T_CheckBox.qml  T_ColorPicker.qml  T_Controls.qml  T_DatePicker.qml  T_Dialog.qml  T_Expander.qml  T_FlipView.qml  T_Home.qml  T_InfoBar.qml  T_MediaPlayer.qml  T_Menu.qml  T_MultiWindow.qml  T_Multiwindow.qml  T_Pivot.qml  T_Progress.qml  T_RatingControl.qml  T_Rectangle.qml  (+30 more)
example/component/: CodeExpander.qml
example/global/: ItemsFooter.qml  ItemsOriginal.qml  MainEvent.qml  qmldir
example/lang/: En.cpp  Lang.cpp  Lang.h  Zh.cpp  zh.cpp  zh.h
example/page/: AboutPage.qml  ChatPage.qml  LoginPage.qml  MainPage.qml  MediaPage.qml  MediaPlayerPage.qml  SingleInstanceWindow.qml  SingleTaskWindow.qml  StandardWindow.qml
example/qml/: App.qml  TestWindow.qml
example/qml-Qt6/: App.qml
example/qml-Qt6/chart/: T_BarChart.qml  T_BubbleChart.qml  T_LineChart.qml  T_PieChart.qml  T_PolarAreaChart.qml  T_RadarChart.qml  T_ScatterChart.qml
example/qml-Qt6/component/: CodeExpander.qml  CustomWindow.qml
example/qml-Qt6/global/: ItemsFooter.qml  ItemsOriginal.qml  Lang.qml  MainEvent.qml  qmldir
example/qml-Qt6/page/: T_3D.qml  T_Acrylic.qml  T_Awesome.qml  T_Badge.qml  T_BreadcrumbBar.qml  T_Buttons.qml  T_CalendarPicker.qml  T_Captcha.qml  T_Carousel.qml  T_CheckBox.qml  T_Clip.qml  T_ColorPicker.qml  T_ComboBox.qml  T_DatePicker.qml  T_Dialog.qml  T_Expander.qml  T_FlipView.qml  T_Home.qml  T_Http.qml  T_Image.qml  T_InfoBar.qml  T_Menu.qml  T_MultiWindow.qml  T_Network.qml  T_Pagination.qml  T_Pivot.qml  T_Progress.qml  T_QRCode.qml  T_RadioButton.qml  T_RatingControl.qml  T_Rectangle.qml  T_RemoteLoader.qml  T_Screenshot.qml  T_Settings.qml  T_ShortcutPicker.qml  T_Slider.qml  T_SplitLayout.qml  T_StaggeredLayout.qml  T_StaggeredView.qml  T_StatusLayout.qml  (+14 more)
example/qml-Qt6/viewmodel/: SettingsViewModel.qml  TextBoxViewModel.qml
example/qml-Qt6/window/: AboutWindow.qml  CrashWindow.qml  FluentInitalizrWindow.qml  HotloadWindow.qml  LoginWindow.qml  MainWindow.qml  PageWindow.qml  SingleInstanceWindow.qml  SingleTaskWindow.qml  StandardWindow.qml
example/qml/chart/: T_BarChart.qml  T_BubbleChart.qml  T_LineChart.qml  T_PieChart.qml  T_PolarAreaChart.qml  T_RadarChart.qml  T_ScatterChart.qml
example/qml/component/: CodeExpander.qml  CustomWindow.qml
example/qml/global/: GlobalModel.qml  ItemsFooter.qml  ItemsOriginal.qml  Lang.qml  MainEvent.qml  qmldir
example/qml/page/: New_TableView.qml  T_3D.qml  T_Acrylic.qml  T_Awesome.qml  T_Badge.qml  T_BreadcrumbBar.qml  T_BubbleBox.qml  T_Buttons.qml  T_CalendarPicker.qml  T_Captcha.qml  T_Carousel.qml  T_Chart.qml  T_CheckBox.qml  T_Clip.qml  T_ColorPicker.qml  T_ComboBox.qml  T_CountTimer.qml  T_CustomPlot.qml  T_CustomPlot2.qml  T_DatePicker.qml  T_Dialog.qml  T_Expander.qml  T_FlipView.qml  T_FluentPro.qml  T_FontAwesome.qml  T_GroupBox.qml  T_Home.qml  T_Http.qml  T_Icons.qml  T_Image.qml  T_InfoBar.qml  T_MediaPlayer.qml  T_Menu.qml  T_MultiWindow.qml  T_Network.qml  T_OpenGL.qml  T_Pagination.qml  T_ParallaxView.qml  T_Pinyin.qml  T_Pivot.qml  (+31 more)
example/qml/viewmodel/: SettingsViewModel.qml  TextBoxViewModel.qml
example/qml/window/: AboutItem.qml  AboutWindow.qml  ChatWindow.qml  CrashWindow.qml  FluentInitalizrWindow.qml  FluentInitializrWindow.qml  HotkeyWindow.qml  HotloadWindow.qml  LoginWindow.qml  MainWindow.qml  main.qml  (+5 more)
example/src/: AppInfo.cpp  AppInfo.h  app_dmp.h  main.cpp  singleton.h  stdafx.h
example/translations/: example_en_US.ts  example_zh_CN.ts
src/: CMakeLists.txt  Def.cpp  Def.h  FluAccentColor.cpp  FluAccentColor.h  FluApp.cpp  FluApp.h  FluCaptcha.cpp  FluCaptcha.h  FluColorSet.cpp  FluColorSet.h  FluColors.cpp  FluColors.h  FluCountTimer.cpp  FluCountTimer.h  FluEventBus.cpp  FluEventBus.h  FluFrameless.cpp  FluFrameless.h  FluFramelessHelper.cpp  FluFramelessHelper.h  FluGlobal.cpp  FluGlobal.h  FluHotkey.cpp  FluHotkey.h  FluHttp.cpp  FluHttp.h  FluHttpInterceptor.cpp  FluHttpInterceptor.h  FluNetwork.cpp  FluNetwork.h  FluQRCode.cpp  FluQRCode.h  FluQrCodeItem.cpp  FluQrCodeItem.h  FluRectangle.cpp  FluRectangle.h  FluRegister.cpp  FluRegister.h  FluTableModel.cpp  (+66 more)
src/.cmake/: QHotkey.cmake  QmlPlugin.cmake  version_dll.rc.in
src/FluentUI/: fluentui_qml_module_dir_map.qrc  fluentuiplugin.lib  plugins.qmltypes  qmldir
src/build-preset/: plugins.qmltypes  qmldir
src/cmake/: QmlPlugin.cmake
src/colorpicker/: ColorPicker.qml
src/controls/: FilledButton.qml  FluAppBar.qml  FluArea.qml  FluAutoSuggestBox.qml  FluBadge.qml  FluButton.qml  FluCalendarPicker.qml  FluCalendarView.qml  FluCalenderView.qml  FluCarousel.qml  FluCheckBox.qml  FluColorPicker.qml  FluColorSet.qml  FluColorView.qml  FluColors.qml  FluColorsOld.qml  FluComboBox.qml  FluContentDialog.qml  FluContentPage.qml  FluControl.qml  FluDatePicker.qml  FluDivider.qml  FluDropDownButton.qml  FluDropShadow.qml  FluExpander.qml  FluFilledButton.qml  FluFlipView.qml  FluFocusRectangle.qml  FluIcon.qml  FluIconButton.qml  FluInfoBar.qml  FluItem.qml  FluMediaPlayer.qml  FluMenu.qml  FluMenuItem.qml  FluMultiLineTextBox.qml  FluMultilineTextBox.qml  FluNavigationView.qml  FluNavigationView2.qml  FluObject.qml  (+40 more)
src/qhotkey/: qhotkey_x11.cpp
src/qmlcustomplot/: RealTimePlot.cpp  RealTimePlot.h  TimePlot.cpp  TimePlot.h  axis.cpp  axis.h  baseplot.cpp  baseplot.h  graph.cpp  graph.h  grid.cpp  grid.h  macros.h  qcustomplot.cpp  qcustomplot.h  ticker.cpp  ticker.h
src/qrcode/: config.h  mask.h  mmask.h  qrencode.cpp  qrencode_inner.h
src/translations/: fluentui_en_US.ts  fluentui_zh_CN.ts
(+496 files in other folders)
